--- a/app/view/Machine.view.xml
+++ b/app/view/Machine.view.xml
@@ -22,33 +22,44 @@
     </Page>
 </mvc:View> -->
 <mvc:View
-	height="100%"
-        controllerName="myapp.controller.Machine"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m">
-	<Page
-		showHeader="false"
-		enableScrolling="false" >
-		<TileContainer
-			id="container"
-			tileDelete="handleTileDelete"
-			tiles="{/}">
-			<StandardTile
-				icon="{icon}"
-				type="Monitor"
-				number="{id}"
-				title="{workcenter}"
-                                info="{info}"
-				infoState="{status}"
-                                press="navToShoporder"
-                        />
-		</TileContainer>
-		<footer>
-			<Toolbar>
-				<ToolbarSpacer/>
-					<Button text="Welcome {/0/user}!" press="handleEditPress" />
-				<ToolbarSpacer/>
-			</Toolbar>
-		</footer>
-	</Page>
+    height="100%"
+    controllerName="myapp.controller.Machine"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    
+    
+    <Page
+        showHeader="false"
+        enableScrolling="false"
+        class="sfondotiles"  		title="Centered Title"
+    >
+
+        <VBox  alignItems="Center"
+              justifyContent="Start">            
+            <Text text="Select an avaiable Machine:" class="cent"/> 
+        </VBox>            
+        <TileContainer
+            id="container"
+            tileDelete="handleTileDelete"
+            tiles="{/}">
+            <StandardTile
+                icon="{icon}"
+                type="Monitor"
+                number="{id}"
+                title="{workcenter}"
+                info="{info}"
+                infoState="{status}"
+                press="navToShoporder"
+            />
+        </TileContainer>
+  
+
+        <footer>
+            <Toolbar>
+                <ToolbarSpacer/>
+                <Button text="Welcome {/0/user}!" press="handleEditPress" />
+                <ToolbarSpacer/>
+            </Toolbar>
+        </footer>
+    </Page>
 </mvc:View>
