--- a/app/view/Main.view.xml
+++ b/app/view/Main.view.xml
@@ -1,87 +1,40 @@
-<mvc:View controllerName="myapp.controller.Main"     xmlns:core="sap.ui.core"
-xmlns:t="sap.ui.table" xmlns:mvc="sap.ui.core.mvc" xmlns:u="sap.ui.unified" xmlns:c="sap.ui.core" xmlns:l="sap.ui.layout" xmlns="sap.m">
-    <l:VerticalLayout width="100%">
-        <l:content>
-            <Panel class="sapUiDemoFlexBoxSizeAdjustments">
-                <headerToolbar>
-                    <Toolbar>
-                        <Title id="head" level="H2" text="My First POD" />
-                    </Toolbar>
-                </headerToolbar>
-                <FlexBox alignItems="Start">
-                    <items>
-                        <l:VerticalLayout width="100%">
-                            <l:content>
-                            <core:Fragment fragmentName="myapp.view.TestFrag" type="XML" />
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns:c="sap.ui.commons" xmlns="sap.m"
+          xmlns:l="sap.ui.layout" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:t="sap.ui.table"
+          xmlns:f="sap.ui.layout.form" xmlns:comp="myapp.component"
+          controllerName="myapp.controller.Main">
+    <Page
+        showHeader="true"
+        showNavButton="false" navButtonPress="onBack"
+        enableScrolling="false"
+        class="myapp">
+        <headerContent>
+            <HBox>
+                <Image
+                    src="images/iguzlogo.png"
+                    width="10%"
+                    densityAware="false"
+                class="centerimage">
+                </Image>
+            </HBox>		
+        </headerContent>
 
-                                <FlexBox alignItems="Start" direction="Column" class="daghespazio">
-                                    <items>
-                                        <Label text=""></Label>
-                                        <Button id="start" text="Start" type="Emphasized" class="sapUiSmallMarginEnd" press="onOpenDialog">
-                                            <layoutData>
-                                                <FlexItemData growFactor="1" />
-                                            </layoutData>
-                                        </Button>
-                                        <Button id="stop" text="Stop" type="Emphasized" class="sapUiSmallMarginEnd" press="understand">
-                                            <layoutData>
-                                                <FlexItemData growFactor="2" />
-                                            </layoutData>
-                                        </Button>
-                                        <Button text="Log DC" type="Emphasized" class="sapUiSmallMarginEnd" press="understand">
-                                            <layoutData>
-                                                <FlexItemData growFactor="3" />
-                                            </layoutData>
-                                        </Button>
-                                        <Button text="Log NC" type="Emphasized" class="sapUiSmallMarginEnd" press="understand">
-                                            <layoutData>
-                                                <FlexItemData growFactor="4" />
-                                            </layoutData>
-                                        </Button>
-                                        <Button text="Assembly" type="Emphasized" class="sapUiSmallMarginEnd" press="understand">
-                                            <layoutData>
-                                                <FlexItemData growFactor="5" />
-                                            </layoutData>
-                                        </Button>
-                                        <Button text="Log comment" type="Emphasized" class="sapUiSmallMarginEnd" press="understand">
-                                            <layoutData>
-                                                <FlexItemData growFactor="6" />
-                                            </layoutData>
-                                        </Button>
-                                    </items>
-                                </FlexBox>
-                            </l:content>
-                        </l:VerticalLayout>
-                        <t:Table cellClick="clickCell" rows="{/ProductCollection}" title="Products" selectionMode="MultiToggle" visibleRowCount="7" width="100%" id="tab1">
-                            <t:columns>
-                                <t:Column width="11rem">
-                                    <Label text="Product Name" />
-                                    <t:template>
-                                        <Text text="{Name}" />
-                                    </t:template>
-                                </t:Column>
-                                <t:Column width="11rem">
-                                    <Label text="Product Id" />
-                                    <t:template>
-                                        <Input value="{ProductId}" />
-                                    </t:template>
-                                </t:Column>
-                                <t:Column width="6rem" hAlign="End">
-                                    <Label text="Quantity" />
-                                    <t:template>
-                                        <Label text="{Quantity}" />
-                                    </t:template>
-                                </t:Column>
-                                <t:Column width="9rem">
-                                    <Label text="Status" />
-                                    <t:template>
-                                        <ObjectStatus text="{Status}" state="{         path: 'Available',         formatter: '.formatAvailableToObjectState'        }" />
-                                    </t:template>
-                                </t:Column>
-                            </t:columns>
-                        </t:Table>
-                    </items>
-                </FlexBox>
-            </Panel>
-        </l:content>
-    </l:VerticalLayout>
+	
+        <content>
+            
+            <VBox>
+
+                <VBox width="100%" class="lowerInput"></VBox>
+                <VBox height="100%" width="100%">
+                    <HBox>
+                        <!-- <Label text="Andon:" class="sapUiSmallMarginBegin sapUiSmallMarginEnd labelAndon"/>
+                        <Text text="{gingo>/shift}" class="sapUiSmallMarginEnd textAndon"/> -->
+                        <Label text="Temperature Monitor for Workcenter 1 >  " class="cent2"/>
+                        <Text text=" {gingo>/datetime}" class="cent2"/>
+                    </HBox>
+                    <html:div id="chartBox" class="opacity" />
+                </VBox>
+            </VBox>
+
+        </content>
+    </Page>
 </mvc:View>
