--- a/app/view/Shoporder.view.xml
+++ b/app/view/Shoporder.view.xml
@@ -22,38 +22,42 @@
     </Page>
 </mvc:View> -->
 <mvc:View
-	height="100%"
-        controllerName="myapp.controller.Shoporder"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m">
-	<Page
-		showHeader="false"
-		enableScrolling="false" 
-                showNavButton="true"
-		>
-		<TileContainer
-			id="container"
-			tileDelete="handleTileDelete"
-			tiles="{/}">
+    height="100%"
+    controllerName="myapp.controller.Shoporder"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page
+        showHeader="false"
+        enableScrolling="false" 
+        showNavButton="true"
+        class="sfondotiles"        >
+        <VBox  alignItems="Center"
+              justifyContent="Start">            
+            <Text text="Select a ShopOrder" class="cent"/> 
+        </VBox>   
+        <TileContainer
+            id="container"
+            tileDelete="handleTileDelete"
+            tiles="{/}">
 
-			<StandardTile
-				icon="{icon}"
-                                type="Monitor"
-				number="{QtyOrdered}"
-                                numberUnit="Qty Ordered"
-				title="{ShopOrder}"
-                                info="{info}"
-				infoState="{status}"
-                                press="apriDialog"
-                                idshoporder="{id}"
-                        />
-		</TileContainer>
-		<footer>
-			<Toolbar>
-				<ToolbarSpacer/>
-					<Button text="Back" press="onNavBack" />
-				<ToolbarSpacer/>
-			</Toolbar>
-		</footer>
-	</Page>
+            <StandardTile
+                icon="{icon}"
+                type="Monitor"
+                number="{QtyOrdered}"
+                numberUnit="Qty Ordered"
+                title="{ShopOrder}"
+                info="{info}"
+                infoState="{status}"
+                press="apriDialog"
+                idshoporder="{id}"
+            />
+        </TileContainer>
+        <footer>
+            <Toolbar>
+                <ToolbarSpacer/>
+                <Button text="Back" press="onNavBack" />
+                <ToolbarSpacer/>
+            </Toolbar>
+        </footer>
+    </Page>
 </mvc:View>
