connessione macchine, bug fixes

--- a/app/view/LoggedDC.fragment.xml
+++ b/app/view/LoggedDC.fragment.xml
@@ -105,7 +105,7 @@
 
             <OverflowToolbar id="otb2">
                 <ToolbarSpacer/>
-                <Button text="Close" type="Transparent" press="onExit"/>
+                <Button text="Close" type="Transparent" press="onExitDC"/>
 
             </OverflowToolbar>
         </l:VerticalLayout>
