--- a/app/view/Operations.view.xml
+++ b/app/view/Operations.view.xml
@@ -17,15 +17,23 @@
                 <columns>
                     <Column minScreenWidth="Tablet"
                             demandPopin="true" hAlign="Center" vAlign="Middle">
-                        <Text text="Operation" width="100%"/>
-                    </Column>
-                    <Column minScreenWidth="Tablet" width="35%"
-                            demandPopin="true" hAlign="Center" vAlign="Middle">
-                        <Text text="Description" width="100%"/>
+                        <Text text="Fase" width="100%"/>
                     </Column>
                     <Column minScreenWidth="Tablet"
                             demandPopin="true" hAlign="Center" vAlign="Middle">
-                        <Text text="Status" width="100%"/>
+                        <Text text="Operazione" width="100%"/>
+                    </Column>
+                    <Column minScreenWidth="Tablet" width="35%"
+                            demandPopin="true" hAlign="Center" vAlign="Middle">
+                        <Text text="Descrizione" width="100%"/>
+                    </Column>
+                    <Column minScreenWidth="Tablet"
+                            demandPopin="true" hAlign="Center" vAlign="Middle">
+                        <Text text="SAP Status" width="100%"/>
+                    </Column>
+                    <Column minScreenWidth="Tablet"
+                            demandPopin="true" hAlign="Center" vAlign="Middle">
+                        <Text text="MES Status" width="100%"/>
                     </Column>
                     <Column minScreenWidth="Tablet"
                             demandPopin="true" hAlign="Center" vAlign="Middle">
@@ -40,11 +48,16 @@
                     <ColumnListItem press="rowOpSelected" type="Active">
                         <cells>
                             <Text
+                                text="{stepid}" class="rt1OpText"/>
+                            
+                            <Text
                                 text="{operation}" class="rt1OpText"/>
                             <Text
                                 text="{operation_description}"/>
                             <Text
-                                text="{status}"/>
+                                text="{sap_status}"/>
+                            <Text
+                                text="{mes_status}"/>
                             <HBox alignItems="Center" justifyContent="Center">
                                 <VBox alignItems="Center" justifyContent="Center">
                                     <HBox>
