tolte chiamate fake, fixato le datacollection

--- a/app/view/LoggedDC.fragment_1.xml
+++ b/app/view/LoggedDC.fragment_1.xml
@@ -72,7 +72,7 @@
                         </Column>
                         <Column
                             hAlign="End">
-                            <Text text="Comments" />
+                            <Text text="Data" />
                         </Column>
                     </columns>
                     <items>
